Fri May 14 15:13:17 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.cpp:
        * DnC/Config_Handlers/DnC_Dump.h:

          Added the dump functions for the Domain Handler.

Fri May 14 12:17:55 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Requirement_Handler.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:

          Among, the common data type handlers, the aforementioned four
          handlers need to handle elements that can be referenced via
          <href> tags and <xmi:id> tags. In this commit, I have addressed
          parsing <href> tags, next, more complicated step will be to
          handle <xmi:id> tags.

Thu May 13 22:56:22 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.cpp:

          Filled in the dump_* functions that pertain to common
          elements. Howerver, dumping data stored in a CORBA::Any would
          not be possible unless we know what value is stored in the first
          place! Hence, we may need to re think this approach for Anys.

        * DnC/Requirement_Handler.cpp:

          Updated the handler to process the <name> tag added to the
          Deployment schema.

Thu May 13 19:46:24 2004  Krishnakumar B  <kitty@nospam.invalid.domain>

        * DnC/Deployment.xsd: Reverted an accidental check-in that
          introduced a bogus schema.

Thu May 13 17:50:16 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Deployment.xsd:

          Added the name attribute for the Deployment:Requirement complex
          type defined in the schema. This was present in the model but
          not in the schema and necessitated this addition.

Thu May 13 15:13:50 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/Config_Handlers/Domain_Handler_Test.cpp: