@@ -235,21 +235,6 @@ namespace CIAO
       void process_sr_resource_type (const XMLCh* resource_type,
                                      Deployment::SharedResource& domain_sr);
 
-      /// dump the XML descriptors
-      void dump (Deployment::Domain& domain);
-
-      /// dump the nodes
-      void dump_nodes (Deployment::Domain& domain);
-
-      /// dump the interconnects
-      void dump_ics (Deployment::Domain& domain);
-
-      /// dump the bridges
-      void dump_bridges (Deployment::Domain& domain);
-
-      /// dump the shared resources
-      void dump_srs (Deployment::Domain& domain);
-
       /// create a document
       DOMDocument* create_document (const char *url);
 
